<resources>
    <!-- Any Page Strings -->
    <string name="app_name">Island Wraps</string>
    <string name="logo">Logo</string>

    <!-- Home Page Strings -->
    <string name="home">Home</string>
    <string name="welcome_message">Welcome! We do meal planning, festivals, and all kinds of parties including weddings, birthdays and more!</string>
    <string name="content">Tent</string>

    <!-- Menu Page Strings -->
    <string name="menu">Menu</string>
    <string name="wraps">Wraps</string>
    <string name="beverages">Beverages</string>
    <string name="sides">Sides</string>
    <string name="specials">Specials</string>
    <string name="dinners">Dinners</string>
    <string name="salads">Salads</string>
    <string name="rubbish_plates">Rubbish Plates</string>

    <!-- Event Page Strings -->
    <string name="events">Events</string>

    <!-- Contact Page Strings -->
    <string name="contact">Contact</string>
    <string name="contact_us">Contact Us:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="phoneNumber">585–123-4567</string>
    <string name="emailAddress">iwemail@gmail.com</string>
    <string name="email">Email:</string>
    <string name="subtitleContact">Follow us on our Social Medias:</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="date_of_event_address_website_etc">Date of event, Address, website etc.</string>
    <string name="event_1_the_lilac_festival">Event 1: The Lilac Festival</string>
    <string name="event_2_fairport_canal_days">Event 2: Fairport Canal Days</string>
    <string name="event_3_rochester_jazz_festival">Event 3: Rochester Jazz Festival</string>
    <string name="event_4_lewiston_pumkin_festival">Event 4: Lewiston Pumkin Festival</string>
    <string name="event_5_lewiston_garden_festival">Event 5: Lewiston Garden Festival</string>

    <string name="upcoming_events">Upcoming Events:</string>

    <!-- Menu Text -->
    <string name="wrapsList"> <br>Jerk Chicken Wrap</br>
        <br>Barbecue Chicken Wrap</br>
        <br>Grilled Chicken Wrap</br>
        <br>Curry Chicken Wrap</br>
        <br>Veggie Wrap</br>
    </string>

    <string name="rubbishList"> <br>Jerk Chicken Rubbish Plate</br>
        <br>Barbecue Chicken Rubbish Plate</br>
        <br>Grilled Chicken Rubbish Plate</br>
        <br>Curry Chicken Rubbish Plate</br>
       <br>Veggie Rubbish Plate</br>
    </string>

    <string name="saladList"> <br>Jerk Chicken Salad</br>
        <br>Barbecue Chicken Salad</br>
        <br>Grilled Chicken Salad</br>
        <br>Curry Chicken Salad</br>
        <br>Vegetable Salad</br>
    </string>

    <string name="dinnerList"> <br>Jerk Chicken Dinner</br>
        <br>Oxtail Dinner</br>
        <br>Curry Goat Dinner</br>
        <br>Fried Fish Dinner</br>
        <br>Vegan Dinner</br>
    </string>

    <string name="specialsList"> <br>Special 1</br>
        <br>Special 2</br>
        <br>Special 3</br>
        <br>Special 4</br>
        <br>Special 5</br>
    </string>

    <string name="sidesList"> <br>Fried Plantains</br>
        <br>Fried Dumplings</br>
        <br>Festivals</br>
        <br>Garden Salad</br>
        <br>Soup</br>
    </string>

    <string name="drinksList"> <br>Orange Lemonade</br>
        <br>Strawberry Lemonade</br>
        <br>Hibiscus Sorrel</br>
        <br>Carrot Juice</br>
        <br>Ginger Beer</br>
    </string>

</resources>